-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.4, 6.3.0
-
Ubuntu Linux / Boot2Qt Toradex Apalis i.MX6
-
-
c9b8acba0e (qt/qtdeclarative/dev) c9b8acba0e (qt/tqtc-qtdeclarative/dev) fa6ed9d79b (qt/qtdeclarative/6.4) fa6ed9d79b (qt/tqtc-qtdeclarative/6.4) 8a3c523dd9 (qt/tqtc-qtdeclarative/6.2) fa6ed9d79b (qt/qtdeclarative/6.4.1), b3750e815 (dev), 806acc65b (6.5)
-
G&UI Finishing 2023
In Qt6 flicking of the ListView is sometimes inconsistent with touch screen. The issue can be reproduced easier with a device that is not too powerful like i.MX6, but it also reproduces on Desktop Linux especially if the system is not too powerful.
Qt 5.15.9 seems to work fine in this regard so it's a regression from Qt5 to Qt6.
To reproduce the issue, please run the attached example.
- Flick the ListView multiple times before it has a change to stop and you should see the issue. When the inconsistent flick happens there is no flicking end signal. Sometimes the even the flick started signal goes missing.
- If you flick the ListView by using the buttons above the ListView the flicking works consistently.
qml: Movement Started 0 0
qml: Flicking Start 654.432 0
qml: Flicking Ended 13.5341 0
qml: Movement Ended 13.5341 0
qml: Movement Started 0 0
qml: Flicking Start 2500 0
qml: Movement Ended 352.195 0
qml: Movement Started 0 0
qml: Movement Ended 0 0
Additionally in Qt 6.3, a following output can be seen sometimes with inconsistent flick:
qml: Movement Started 0 0
qml: Flicking Start 833.333 0
QUnifiedTimer::stopAnimationDriver: driver is not running
qml: Movement Ended -4.60406 0
- relates to
-
QTBUG-103832 The delegate item of ListView is not pressed if the boundsBehavior is to set Flickable.StopAtBounds
-
- Closed
-